networkpolicy/allow-universe-to-echo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-universe-to-echo
  namespace: echo
spec:
  podSelector:
    matchLabels:
      app: echo

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: universe
      ports:
        - protocol: TCP
          port: 80
